--- a/.jshintrc
+++ b/.jshintrc
@@ -17,6 +17,7 @@
 	"smarttabs": true,
 	"white": false,
 	"globals": {
+		"angular": false,
 		"browser": false,
 		"describe": false,
 		"beforeEach": false,
