--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "export NODE_ENV=production && gulp"
+	"start": "set NODE_ENV=production && gulp"
   },
   "dependencies": {
     "express": "^4.13.3",
@@ -31,6 +31,7 @@
     "gulp-ng-templates": "0.0.6",
     "gulp-nodemon": "^2.0.2",
     "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.4",
     "pm2": "^1.1.3",
     "run-sequence": "^1.2.2"
